apply code migrations as suggested by IntelliJ Idea and Sonar