@@ -38,7 +38,6 @@ import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static alfio.model.system.ConfigurationKeys.DISPLAY_STATS_IN_EVENT_DETAIL;
-import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.toMap;
 import static org.apache.commons.lang3.ObjectUtils.firstNonNull;
 
@@ -83,13 +82,13 @@ public class EventStatisticsManager {
     }
 
     private List<Event> getAllEvents(String username) {
-        List<Integer> orgIds = userManager.findUserOrganizations(username).stream().map(Organization::getId).collect(toList());
+        List<Integer> orgIds = userManager.findUserOrganizations(username).stream().map(Organization::getId).toList();
         return orgIds.isEmpty() ? Collections.emptyList() : eventRepository.findByOrganizationIds(orgIds);
     }
 
 
     public List<EventStatistic> getAllEventsWithStatisticsFilteredBy(String username, Predicate<Event> predicate) {
-        List<Event> events = getAllEvents(username).stream().filter(predicate).collect(toList());
+        List<Event> events = getAllEvents(username).stream().filter(predicate).toList();
         Map<Integer, Event> mappedEvent = events.stream().collect(Collectors.toMap(Event::getId, Function.identity()));
         if(!mappedEvent.isEmpty()) {
             boolean isOwner = userManager.isOwner(userManager.findUserByUsername(username));
@@ -103,7 +102,7 @@ public class EventStatisticsManager {
             return stats.map(stat -> {
                 Event event = mappedEvent.get(stat.getEventId());
                 return new EventStatistic(event, stat, displayStatisticsForEvent(event));
-            }).collect(Collectors.toList());
+            }).toList();
         } else {
             return Collections.emptyList();
         }
@@ -127,7 +126,7 @@ public class EventStatisticsManager {
         BigDecimal grossIncome = owner ? MonetaryUtil.centsToUnit(eventRepository.getGrossIncome(event.getId()), event.getCurrency()) : BigDecimal.ZERO;
 
         List<TicketCategory> ticketCategories = ticketCategoryRepository.findAllTicketCategories(event.getId());
-        List<Integer> ticketCategoriesIds = ticketCategories.stream().map(TicketCategory::getId).collect(Collectors.toList());
+        List<Integer> ticketCategoriesIds = ticketCategories.stream().map(TicketCategory::getId).toList();
 
         Map<Integer, Map<String, String>> descriptions = ticketCategoryDescriptionRepository.descriptionsByTicketCategory(ticketCategoriesIds);
         Map<Integer, TicketCategoryStatisticView> ticketCategoriesStatistics = owner ? ticketCategoryRepository.findStatisticsForEventIdByCategoryId(event.getId()) : ticketCategoriesIds.stream().collect(toMap(Function.identity(), id -> TicketCategoryStatisticView.empty(id, event.getId())));
@@ -137,7 +136,7 @@ public class EventStatisticsManager {
 
         List<TicketCategoryWithAdditionalInfo> tWithInfo = ticketCategories.stream()
             .map(t -> new TicketCategoryWithAdditionalInfo(event, t, ticketCategoriesStatistics.get(t.getId()), descriptions.get(t.getId()), specialPrices.get(t.getId()), metadata.get(t.getId())))
-            .collect(Collectors.toList());
+            .toList();
 
         Set<ExtensionCapabilitySummary> supportedCapabilities;
         if(event.getFormat() != Event.EventFormat.IN_PERSON) {
