@@ -19,7 +19,6 @@ package alfio.model;
 import org.junit.jupiter.api.Test;
 
 import java.util.Comparator;
-import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.assertNotEquals;
 
@@ -28,8 +27,7 @@ class ContentLanguageTest {
     @Test
     void validateContentLanguages() {
         var sortedContentLanguages = ContentLanguage.ALL_LANGUAGES.stream()
-            .sorted(Comparator.comparing(ContentLanguage::getValue))
-            .collect(Collectors.toList());
+            .sorted(Comparator.comparing(ContentLanguage::getValue)).toList();
 
         for(int i = 1; i < sortedContentLanguages.size(); i++) {
             var current = sortedContentLanguages.get(i);
